<resources>
    <string name="locationPrivacyToolkitGlobalClose">Close</string>
    <string name="systemPermissionTitle">System Permissions</string>
    <string name="systemPermissionOpenSettingsTitle">Open System Settings</string>
    <string name="systemPermissionLocationAccessTitle">Location Access</string>
    <string name="systemPermissionBackgroundAccessTitle">Background Access</string>
    <string name="systemPermissionShowMoreButton">Show more</string>
    <string name="systemPermissionUseExampleData">Use example data</string>
    <string name="systemPermissionImportExampleData">Import</string>
    <string name="systemPermissionImportExampleDataMessage">%d locations imported</string>
    <string name="systemPermissionDeleteExampleData">Delete</string>
    <string name="systemPermissionDeleteExampleDataDialogTitle">Delete example locations?</string>
    <string name="systemPermissionDeleteExampleDataDialogMessage">Are you sure to delete all example locations? This cannot be undone.</string>
    <string name="systemPermissionDeleteExampleDataDialogDeleteButton">Delete</string>
    <string name="systemPermissionDeleteExampleDataDialogCancelButton">Cancel</string>
    <string name="locationPrivacyToolkitTitle">Location Privacy</string>
    <string name="privacyConfigTitle">Privacy Configuration</string>
    <string name="accessTitle">Access</string>
    <string name="accessSubtitle">Share your location info?</string>
    <string name="accessDescription">The access-option is the tool to choose, whether your location data is passed to the app or not. With this option you can allow or disallow an app to use your location information altogether.</string>
    <string name="accuracyTitle">Accuracy</string>
    <string name="accuracySubtitle">How accurate is your shared location?</string>
    <string name="accuracyDescription">With accuracy, you are able to determine the precision of your device location. The value for accuracy defines a radius, in which the retrieved location usually lays in. Therefore a higher value is more imprecise and potentially has the effect of degrading service quality, while improving your privacy.</string>
    <string name="delayTitle">Delay</string>
    <string name="delaySubtitle">How current is your shared location?</string>
    <string name="delayDescription">Using the delay you can determine, how current the location is, that this app is able to retrieve from your device. A higher value therefore leads to more delayed retrieval of your devices location. Example: If you\'ve set to 10 Minutes, this your current location is retrieved 10 Minutes later. In the meantime the previously retrieved and already 10 minutes old location is used, if available. This could potentially degrade the service quality.</string>
    <string name="exclusionZoneTitle">Exclusion Zones</string>
    <string name="exclusionZoneSubtitle">Where not to share your location?</string>
    <string name="exclusionZoneDescription">By defining exclusion zones, you can exclude chosen areas to be ignored for location tracking. This could for example be your home, of which you don\'t want to share the location to a location based service.</string>
    <string name="exclusionZonesDeletedMessage">Exclusion Zones deleted</string>
    <string name="exclusionZonesDeleteUndo">Undo</string>
    <string name="exclusionZonesDelete">Delete Zones</string>
    <string name="exclusionZonesCreate">Create Exclusion Zone</string>
    <string name="exclusionZonesCreateButton">Create</string>
    <string name="intervalTitle">Interval</string>
    <string name="intervalSubtitle">How often is your location accessed?</string>
    <string name="intervalDescription">Using the interval you can determine, how often this app is able to retrieve a new location from your device. A higher value therefore leads to a less frequent retrieval of your devices location. Example: If you\'ve set to 10 Minutes, this means a new location is at maximum retrieved every 10 Minutes. In the meantime the previously retrieved location is used, which of course it might up to 10 Minutes old, which could potentially degrade the service quality.</string>
    <string name="visibilityTitle">Visibility</string>
    <string name="visibilitySubtitle">Who is your location shared with?</string>
    <string name="visibilityDescription">Using visibility you can determine, who your location-data is shared with on a social level. The app is responsible to handle your preference.</string>
    <string name="visibilityNoneOption">Nobody</string>
    <string name="visibilityFriendsOption">Friends</string>
    <string name="visibilityContactsOption">Contacts</string>
    <string name="visibilityEveryoneOption">Everyone</string>
    <string name="autoDeletionTitle">Auto-Deletion</string>
    <string name="autoDeletionSubtitle">How long is your location info usable?</string>
    <string name="autoDeletionDescription">Using the auto-deletion-option, you can select whether and after what time your location data is deleted. This way your location-data will be invalidated automatically.</string>
    <string name="historyTitle">Location History</string>
    <string name="historySubtitle">Manage your previous locations</string>
    <string name="historyDescription">Using the location history option, you can view and manage all of your previously obtained location data.</string>
    <string name="historyMapLayer">Map Layers</string>
    <string name="historyMapLayerTimeline">Timeline</string>
    <string name="historyMapLayerHeatmap">Heatmap</string>
    <string name="historyDeletedMessage">%d locations deleted</string>
    <string name="historyDeleteUndo">Undo</string>
    <string name="historyDelete">Delete Locations</string>
    <string name="historyDeleteAlertTitle">Delete locations</string>
    <string name="historyDeleteAlertMessage">Are you sure to delete the selected %d locations? This cannot be undone.</string>
    <string name="historyDeleteAlertButton">Delete</string>
    <string name="historyCancelAlertButton">Cancel</string>
    <string name="historyFilter">Filter Locations</string>
    <string name="historyFilterByTime">Time</string>
    <string name="historyFilterByTimeDateHint">Select date</string>
    <string name="historyFilterByArea">Area</string>
    <string name="historyFilterByAreaCreate">Create</string>
    <string name="historyFilterByAreaHint">Draw an area to select locations</string>
    <string name="historyFilterCardTitle">Which locations to delete?</string>
    <string name="historyFilterCardClose">Close Filter</string>
    <string name="historyFilterReset">Reset</string>
    <string name="externalTitle">External</string>
    <string name="externalSubtitle">Doing some external stuff to your data</string>
    <string name="externalDescription">This is an external processor, it completely randomizes your location.</string>
</resources>
