<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="true"
        android:keepScreenOn="true"
        android:orientation="vertical"
        android:theme="@style/Theme.LocationPrivacyToolkit">

        <com.mapbox.mapboxsdk.maps.MapView
            android:id="@+id/mapView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/filterCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:padding="16dp"
            android:visibility="gone"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="16dp">

                <TextView
                    android:id="@+id/filterCardTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="8dp"
                    android:text="@string/historyFilterCardTitle"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toTopOf="@id/filterCardToggleGroup"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/filterCardCloseButton"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:contentDescription="@string/historyFilterCardClose"
                    android:drawableEnd="@drawable/ic_close"
                    android:padding="0dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.button.MaterialButtonToggleGroup
                    android:id="@+id/filterCardToggleGroup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/filterCardTitle"
                    app:singleSelection="true">

                    <Button
                        android:id="@+id/filterCardTimeToggleButton"
                        style="?attr/materialButtonOutlinedStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/historyFilterByTime" />

                    <Button
                        android:id="@+id/filterCardAreaToggleButton"
                        style="?attr/materialButtonOutlinedStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/historyFilterByArea" />

                </com.google.android.material.button.MaterialButtonToggleGroup>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/filterCardTimeLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:animateLayoutChanges="true"
                    android:paddingBottom="16dp"
                    android:visibility="gone"
                    app:layout_constraintBottom_toTopOf="@id/filterCardDeleteButton"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/filterCardToggleGroup">

                    <Button
                        android:id="@+id/filterCardTimeDateRangeStart"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/historyFilterByTimeDateHint"
                        android:textSize="12sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@id/filterCardTimeDateRangeSeparator"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/filterCardTimeDateRangeSeparator"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="4dp"
                        android:text="–"
                        android:textFontWeight="700"
                        android:textSize="20sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@id/filterCardTimeDateRangeEnd"
                        app:layout_constraintStart_toEndOf="@id/filterCardTimeDateRangeStart"
                        app:layout_constraintTop_toTopOf="parent" />

                    <Button
                        android:id="@+id/filterCardTimeDateRangeEnd"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/historyFilterByTimeDateHint"
                        android:textSize="12sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@id/filterCardTimeDateRangeSeparator"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/filterCardAreaLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:animateLayoutChanges="true"
                    android:paddingVertical="12dp"
                    android:visibility="gone"
                    app:layout_constraintBottom_toTopOf="@id/filterCardDeleteButton"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/filterCardToggleGroup">

                    <TextView
                        android:id="@+id/filterCardAreaHintText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/historyFilterByAreaHint"
                        android:textSize="18sp"
                        android:textStyle="italic"
                        android:visibility="gone"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/filterCardAreaInfoText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="18sp"
                        android:textStyle="italic"
                        android:visibility="gone"
                        app:layout_constraintEnd_toStartOf="@id/filterCardClearAreaButton"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"/>

                    <Button
                        android:id="@+id/filterCardCreateAreaButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawableEnd="@drawable/ic_edit"
                        android:paddingHorizontal="12dp"
                        android:paddingVertical="8dp"
                        android:text="@string/historyFilterByAreaCreate"
                        android:textSize="12sp"
                        android:visibility="gone"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <Button
                        android:id="@+id/filterCardClearAreaButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawableEnd="@drawable/ic_undo"
                        android:paddingHorizontal="12dp"
                        android:paddingVertical="8dp"
                        android:text="@string/historyFilterReset"
                        android:textSize="12sp"
                        android:visibility="gone"
                        app:layout_constraintBottom_toBottomOf="@id/filterCardAreaInfoText"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@id/filterCardAreaInfoText"
                        app:layout_constraintTop_toTopOf="@id/filterCardAreaInfoText" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <Button
                    android:id="@+id/filterCardDeleteButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableEnd="@drawable/ic_delete"
                    android:enabled="false"
                    android:paddingHorizontal="12dp"
                    android:paddingVertical="8dp"
                    android:text="@string/historyDelete"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/filterFab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:contentDescription="@string/historyFilter"
            app:layout_constraintBottom_toTopOf="@id/heatmapLayerFab"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/ic_delete" />

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/layersFab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:contentDescription="@string/historyMapLayer"
            android:text="@string/historyMapLayer"
            app:icon="@drawable/ic_layer"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/timeLineLayerFab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:contentDescription="@string/historyMapLayerTimeline"
            app:fabSize="mini"
            app:layout_constraintBottom_toTopOf="@id/layersFab"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/ic_timeline" />

        <TextView
            android:id="@+id/timeLineLayerFabText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:background="@drawable/rounded_corners"
            android:paddingHorizontal="16dp"
            android:paddingVertical="8dp"
            android:text="@string/historyMapLayerTimeline"
            app:layout_constraintBottom_toBottomOf="@+id/timeLineLayerFab"
            app:layout_constraintEnd_toStartOf="@+id/timeLineLayerFab"
            app:layout_constraintTop_toTopOf="@+id/timeLineLayerFab" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/heatmapLayerFab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:contentDescription="@string/historyMapLayerHeatmap"
            android:text="@string/historyMapLayerHeatmap"
            app:fabSize="mini"
            app:layout_constraintBottom_toTopOf="@id/timeLineLayerFab"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/ic_thermostat" />

        <TextView
            android:id="@+id/heatmapLayerFabText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:background="@drawable/rounded_corners"
            android:paddingHorizontal="16dp"
            android:paddingVertical="8dp"
            android:text="@string/historyMapLayerHeatmap"
            app:layout_constraintBottom_toBottomOf="@+id/heatmapLayerFab"
            app:layout_constraintEnd_toStartOf="@+id/heatmapLayerFab"
            app:layout_constraintTop_toTopOf="@+id/heatmapLayerFab" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>